--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ a {
 
 body {
     font-size: 14px;
-    width: 1600px;
+    width: 1200px;
     margin: 0 auto;
 }
 
@@ -36,14 +36,14 @@ body {
 /* Start to write code from here */
 /* CODE -------- */
 
+/*DESKTOP*/
+
 .tradition_and_love{
   width: 100%;
   height: 1229px;
   background-color: #FFF5F6;
   display:flex;
   flex-direction: column;
-  background-image: url(".././images/section.png");
-  background-repeat: no-repeat;
 }
 
 .title{
@@ -60,6 +60,7 @@ body {
   line-height: 34px;
   letter-spacing: 0.04em;
   text-align: center;
+  margin-bottom: 16px;
 }
 
 .second-title{
@@ -74,12 +75,16 @@ body {
 
 .imag-y-text{
   display:flex;
+  background-image: url(".././images/section.png");
+  background-repeat: no-repeat;
+  margin-top: 60px;
 }
 
 
 .paragraph{
   font-family: 'DM Sans', sans-serif;
-  margin: 150px 0 0 99px;
+  margin: 0px 0 0 99px;
+  padding-top: 90px;
   width: 463px;
   font-weight: 500;
 }
@@ -116,10 +121,19 @@ button{
 
 .second-main{
   display:flex;
+  width: 1080px;
+  margin: 0 auto;
+  justify-content: space-between;
+  padding-right: 75px;
+}
+
+.second-main_svg {
+  margin-bottom: 40px;
 }
 
 .second-main__elements{
   width: 288px;
+  margin-top: 60px;
 }
 
 .second-main__elements h2{
@@ -132,25 +146,49 @@ button{
   text-align: start;
 }
 
-.second-main__elements p{
+.second-main__text {
   font-family: 'DM Sans', sans-serif;
   font-size: 16px;
   font-weight: 700;
   line-height: 28px;
   letter-spacing: 0.02em;
   text-align: left;
+  margin-top: 16px;
+}
 
+.gallery {
+  position: relative;
 }
 
 .colash{
+  position: absolute;
   width: 1013px;
   height: 430px;
   display:flex;
   align-items: center;
+  left: 90px;
+  top: -552px;
+
+}
+
+.colash > :not(:last-child) {
+  margin-right: 8px;
+}
+
+.colash_4 {
+  margin-top: 9px;
+}
+
+.colash_5 {
+  margin-top: -45px;
+}
+
+.colash_6 {
+  margin-top: 12px;
 }
 
 .testimony{
-  margin-top: 320px;
+  margin-top: 480px;
   font-family:'DM Sans', sans-serif;
   font-weight: 500;
   text-align: center;
@@ -162,17 +200,35 @@ button{
 }
 
 .testimony__background{
+  display: flex;
   width:968px;
   height:138px;
   background-color:#FAFAFA;
+  margin: 0 auto;
+  padding: 0 auto;
+  justify-content: center;
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+
+.testimony__quotation {
+  width: 50px;
+  height: 50px;
+  margin-top: 22px;
 }
 
 .testimony__paragraph{
+  display: flex;
+  display: inline-flex;
   font-size: 16px;
   font-weight: 500;
   line-height: 30px;
   letter-spacing: 0.04em;
   color:#000000;
+  text-decoration: underline;
+  -webkit-text-decoration-color: #e1e1e1;
+  text-decoration-color: #e1e1e1;
+  align-items: center;
 }
 
 .testimony__name{
@@ -181,4 +237,770 @@ button{
   letter-spacing: 0em;
   text-align: center;
   color: #000000;
+  margin-top: 16px;
+  margin-bottom: 33px;
+}
+
+/*@MEDIA*/
+
+@media screen and (min-width: 480px){
+
+  /* Dont touch - just for David*/
+
+:root {
+  --font-main: 'DM Sans';
+  --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  --cursor: pointer;
+  --color-white: #fff;
+  --color-red: #D41443;
+  --color-black: #000000;
+}
+
+*{
+  padding: 0;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+body {
+  font-size: 14px;
+  width: 1200px;
+  /*
+  width: 1600px;*/
+  margin: 0 auto;
+}
+
+.container {
+  width: 1200px;
+  box-sizing: border-box;
+  margin: 0 auto;
+}
+
+/* Dont touch */
+
+
+/* Start to write code from here */
+/* CODE -------- */
+
+/*DESKTOP*/
+
+.tradition_and_love{
+width: 100%;
+height: 1229px;
+background-color: #FFF5F6;
+display:flex;
+flex-direction: column;
+}
+
+.title{
+font-family:'Titan One', cursive;
+font-weight: 400;
+line-height:30px;
+text-align: center;
+}
+
+.main-title{
+padding-top: 60px;
+color:#FFA5BA;
+font-size: 30px;
+line-height: 34px;
+letter-spacing: 0.04em;
+text-align: center;
+margin-bottom: 16px;
+}
+
+.second-title{
+color: #D41443;
+font-size: 58px;
+font-weight: 400;
+line-height: 66.41px;
+letter-spacing: 0.06em;
+
+
+}
+
+.imag-y-text{
+display:flex;
+background-image: url(".././images/section.png");
+background-repeat: no-repeat;
+margin-top: 60px;
+}
+
+
+.paragraph{
+font-family: 'DM Sans', sans-serif;
+margin: 0px 0 0 99px;
+padding-top: 90px;
+width: 463px;
+font-weight: 500;
+}
+
+.paragraph__one{
+font-size: 16px;
+line-height: 28px;
+letter-spacing: 0.04em;
+text-align: left;
+}
+
+.paragraph__two{
+margin-top: 32px;
+color:#907E82;
+font-size: 14px;
+line-height: 27px;
+text-align: left;
+}
+
+button{
+margin-top: 40px;
+width: 176px;
+height: 44px;
+background-color: #FFFFFF;
+border-radius: 22px;
+font-family:'DM Sans', sans-serif;
+font-weight: 700;
+font-size: 16px;
+line-height: 28px;
+text-align: center;
+color: #D41443;
+
+}
+
+.second-main{
+display:flex;
+width: 1080px;
+margin: 0 auto;
+justify-content: space-between;
+padding-right: 75px;
+}
+
+.second-main_svg {
+margin-bottom: 40px;
+}
+
+.second-main__elements{
+width: 288px;
+margin-top: 60px;
+}
+
+.second-main__elements h2{
+color: #D41443;
+font-family: 'Titan One', cursive;
+font-size: 58px;
+font-weight: 400;
+line-height: 66px;
+letter-spacing: 0.04em;
+text-align: start;
+}
+
+.second-main__text {
+font-family: 'DM Sans', sans-serif;
+font-size: 16px;
+font-weight: 700;
+line-height: 28px;
+letter-spacing: 0.02em;
+text-align: left;
+margin-top: 16px;
+}
+
+.gallery {
+position: relative;
+}
+
+.colash{
+position: absolute;
+width: 1013px;
+height: 430px;
+display:flex;
+align-items: center;
+left: 90px;
+top: -552px;
+
+}
+
+.colash > :not(:last-child) {
+margin-right: 8px;
+}
+
+.colash_4 {
+margin-top: 9px;
+}
+
+.colash_5 {
+margin-top: -45px;
+}
+
+.colash_6 {
+margin-top: 12px;
+}
+
+.testimony{
+margin-top: 480px;
+font-family:'DM Sans', sans-serif;
+font-weight: 500;
+text-align: center;
+}
+
+.testimony__image{
+width:85px;
+height:85px;
+}
+
+.testimony__background{
+display: flex;
+width:968px;
+height:138px;
+background-color:#FAFAFA;
+margin: 0 auto;
+padding: 0 auto;
+justify-content: center;
+margin-top: 16px;
+margin-bottom: 16px;
+}
+
+.testimony__quotation {
+width: 50px;
+height: 50px;
+margin-top: 22px;
+}
+
+.testimony__paragraph{
+display: flex;
+display: inline-flex;
+font-size: 16px;
+font-weight: 500;
+line-height: 30px;
+letter-spacing: 0.04em;
+color:#000000;
+text-decoration: underline;
+-webkit-text-decoration-color: #e1e1e1;
+text-decoration-color: #e1e1e1;
+align-items: center;
+}
+
+.testimony__name{
+font-size: 20px;
+line-height: 37px;
+letter-spacing: 0em;
+text-align: center;
+color: #000000;
+margin-top: 16px;
+margin-bottom: 33px;
+}
+
+
+}
+
+@media screen and (min-width: 768px){
+  /* Dont touch - just for David*/
+
+:root {
+  --font-main: 'DM Sans';
+  --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  --cursor: pointer;
+  --color-white: #fff;
+  --color-red: #D41443;
+  --color-black: #000000;
+}
+
+*{
+  padding: 0;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+body {
+  width: 768px;
+  font-size: 14px;
+  margin: 0 auto;
+}
+
+.container {
+  width: 768px;
+  box-sizing: border-box;
+  margin: 0 auto;
+}
+
+/* Dont touch */
+
+
+/* Start to write code from here */
+/* CODE -------- */
+
+/*TABLET*/
+
+.tradition_and_love{
+width: 702px;
+height: 1092px;
+background-color: #FFF5F6;
+display:flex;
+flex-direction: column;
+}
+
+.title{
+font-family:'Titan One', cursive;
+font-weight: 400;
+line-height: 30px;
+text-align: center;
+}
+
+.main-title{
+padding-top: 60px;
+color:#FFA5BA;
+font-size: 26px;
+line-height: 30px;
+letter-spacing: 0.04em;
+text-align: center;
+margin-bottom: 16px;
+}
+
+.second-title{
+color: #D41443;
+font-size: 48px;
+font-weight: 400;
+line-height: 55px;
+letter-spacing: 0.04em;
+}
+
+.imag-y-text{
+display:flex;
+background-image: url(".././images/section.png");
+background-size: contain;
+background-repeat: no-repeat;
+margin-top: 40px;
+}
+
+.imag-y-text img{
+  margin-top: 40px;
+  width: 336px;
+  height: 335px;
+}
+
+.paragraph{
+font-family: 'DM Sans', sans-serif;
+margin: 0 34px 0 32px;
+padding-top: 40px;
+width: 334px;
+font-weight: 500;
+}
+
+.paragraph__one{
+font-size: 14px;
+line-height: 25px;
+letter-spacing: 0.04em;
+text-align: left;
+}
+
+.paragraph__two{
+margin-top: 20px;
+color:#907E82;
+font-size: 14px;
+line-height: 25px;
+text-align: left;
+}
+
+button{
+margin-top: 40px;
+width: 176px;
+height: 44px;
+background-color: #FFFFFF;
+border-radius: 22px;
+font-family:'DM Sans', sans-serif;
+font-weight: 700;
+font-size: 16px;
+line-height: 21px;
+text-align: center;
+color: #D41443;
+}
+
+.second-main{
+display:flex;
+width: 570px;
+margin: 0 auto;
+justify-content: space-between;
+padding-right: 75px;
+}
+
+.second-main_svg {
+  width: 50px;
+  height: 50px;
+  margin-bottom: 36px;
+}
+
+.second-main_svg2{
+  width: 49px;
+  height: 50px;
+  margin-bottom: 36px;
+}
+
+.second-main_svg3{
+  width: 44px;
+  height: 50px;
+  margin-bottom: 36px;
+}
+
+.second-main__elements{
+  width: 180px;
+  margin-top: 60px;
+}
+
+
+.second-main__elements h2{
+color: #D41443;
+font-family: 'Titan One', cursive;
+font-size: 48px;
+font-weight: 400;
+line-height: 55px;
+letter-spacing: 0.04em;
+text-align: start;
+}
+
+.second-main__text {
+font-family: 'DM Sans', sans-serif;
+font-size: 14px;
+font-weight: 700;
+line-height: 24px;
+letter-spacing: 0.02em;
+text-align: left;
+margin-top: 13px;
+}
+
+.gallery {
+position: relative;
+}
+
+.colash{
+position: absolute;
+width: 768px;
+height: 430px;
+display:flex;
+align-items: center;
+left: 0px;
+top: -552px;
+
+}
+
+.colash > :not(:last-child) {
+margin-right: 8px;
+}
+
+.colash_4 {
+margin-top: 9px;
+}
+
+.colash_5 {
+margin-top: -45px;
+}
+
+.colash_6 {
+margin-top: 12px;
+}
+
+.testimony{
+margin-top: 480px;
+font-family:'DM Sans', sans-serif;
+font-weight: 500;
+text-align: center;
+}
+
+.testimony__image{
+width:85px;
+height:85px;
+}
+
+.testimony__background{
+display: flex;
+width:968px;
+height:138px;
+background-color:#FAFAFA;
+margin: 0 auto;
+padding: 0 auto;
+justify-content: center;
+margin-top: 16px;
+margin-bottom: 16px;
+}
+
+.testimony__quotation {
+width: 50px;
+height: 50px;
+margin-top: 22px;
+}
+
+.testimony__paragraph{
+display: flex;
+display: inline-flex;
+font-size: 16px;
+font-weight: 500;
+line-height: 30px;
+letter-spacing: 0.04em;
+color:#000000;
+text-decoration: underline;
+-webkit-text-decoration-color: #e1e1e1;
+text-decoration-color: #e1e1e1;
+align-items: center;
+}
+
+.testimony__name{
+font-size: 20px;
+line-height: 37px;
+letter-spacing: 0em;
+text-align: center;
+color: #000000;
+margin-top: 16px;
+margin-bottom: 33px;
+}
+
+}
+
+@media screen and (min-width: 1280px){
+  /* Dont touch - just for David*/
+
+:root {
+  --font-main: 'DM Sans';
+  --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  --cursor: pointer;
+  --color-white: #fff;
+  --color-red: #D41443;
+  --color-black: #000000;
+}
+
+*{
+  padding: 0;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+body {
+  font-size: 14px;
+  width: 1200px;
+  /*
+  width: 1600px;*/
+  margin: 0 auto;
+}
+
+.container {
+  width: 1200px;
+  box-sizing: border-box;
+  margin: 0 auto;
+}
+
+/* Dont touch */
+
+
+/* Start to write code from here */
+/* CODE -------- */
+
+/*DESKTOP*/
+
+.tradition_and_love{
+width: 100%;
+height: 1229px;
+background-color: #FFF5F6;
+display:flex;
+flex-direction: column;
+}
+
+.title{
+font-family:'Titan One', cursive;
+font-weight: 400;
+line-height:30px;
+text-align: center;
+}
+
+.main-title{
+padding-top: 60px;
+color:#FFA5BA;
+font-size: 30px;
+line-height: 34px;
+letter-spacing: 0.04em;
+text-align: center;
+margin-bottom: 16px;
+}
+
+.second-title{
+color: #D41443;
+font-size: 58px;
+font-weight: 400;
+line-height: 66.41px;
+letter-spacing: 0.06em;
+
+
+}
+
+.imag-y-text{
+display:flex;
+background-image: url(".././images/section.png");
+background-repeat: no-repeat;
+margin-top: 60px;
+}
+
+
+.paragraph{
+font-family: 'DM Sans', sans-serif;
+margin: 0px 0 0 99px;
+padding-top: 90px;
+width: 463px;
+font-weight: 500;
+}
+
+.paragraph__one{
+font-size: 16px;
+line-height: 28px;
+letter-spacing: 0.04em;
+text-align: left;
+}
+
+.paragraph__two{
+margin-top: 32px;
+color:#907E82;
+font-size: 14px;
+line-height: 27px;
+text-align: left;
+}
+
+button{
+margin-top: 40px;
+width: 176px;
+height: 44px;
+background-color: #FFFFFF;
+border-radius: 22px;
+font-family:'DM Sans', sans-serif;
+font-weight: 700;
+font-size: 16px;
+line-height: 28px;
+text-align: center;
+color: #D41443;
+
+}
+
+.second-main{
+display:flex;
+width: 1080px;
+margin: 0 auto;
+justify-content: space-between;
+padding-right: 75px;
+}
+
+.second-main_svg {
+margin-bottom: 40px;
+}
+
+.second-main__elements{
+width: 288px;
+margin-top: 60px;
+}
+
+.second-main__elements h2{
+color: #D41443;
+font-family: 'Titan One', cursive;
+font-size: 58px;
+font-weight: 400;
+line-height: 66px;
+letter-spacing: 0.04em;
+text-align: start;
+}
+
+.second-main__text {
+font-family: 'DM Sans', sans-serif;
+font-size: 16px;
+font-weight: 700;
+line-height: 28px;
+letter-spacing: 0.02em;
+text-align: left;
+margin-top: 16px;
+}
+
+.gallery {
+position: relative;
+}
+
+.colash{
+position: absolute;
+width: 1013px;
+height: 430px;
+display:flex;
+align-items: center;
+left: 90px;
+top: -552px;
+
+}
+
+.colash > :not(:last-child) {
+margin-right: 8px;
+}
+
+.colash_4 {
+margin-top: 9px;
+}
+
+.colash_5 {
+margin-top: -45px;
+}
+
+.colash_6 {
+margin-top: 12px;
+}
+
+.testimony{
+margin-top: 480px;
+font-family:'DM Sans', sans-serif;
+font-weight: 500;
+text-align: center;
+}
+
+.testimony__image{
+width:85px;
+height:85px;
+}
+
+.testimony__background{
+display: flex;
+width:968px;
+height:138px;
+background-color:#FAFAFA;
+margin: 0 auto;
+padding: 0 auto;
+justify-content: center;
+margin-top: 16px;
+margin-bottom: 16px;
+}
+
+.testimony__quotation {
+width: 50px;
+height: 50px;
+margin-top: 22px;
+}
+
+.testimony__paragraph{
+display: flex;
+display: inline-flex;
+font-size: 16px;
+font-weight: 500;
+line-height: 30px;
+letter-spacing: 0.04em;
+color:#000000;
+text-decoration: underline;
+-webkit-text-decoration-color: #e1e1e1;
+text-decoration-color: #e1e1e1;
+align-items: center;
+}
+
+.testimony__name{
+font-size: 20px;
+line-height: 37px;
+letter-spacing: 0em;
+text-align: center;
+color: #000000;
+margin-top: 16px;
+margin-bottom: 33px;
+}
+
 }
