nav buttom modified

--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,8 @@ header>.container {
   align-items: center;
 }
 
-.nav-button>button {
+.nav-button {
+  position: relative;
   font-family: 'DM Sans';
   font-style: normal;
   font-weight: 700;
@@ -64,8 +65,13 @@ header>.container {
   cursor: pointer;
 }
 
-.nav-button>button:hover {
+.nav-button:hover {
   background-color: #ECEBEB;
+}
+
+.nav-button>svg {
+  margin-top: 2px;
+  margin-left: 12px;
 }
 
 .home img {
