--- a/css/styles.css
+++ b/css/styles.css
@@ -1,195 +1,879 @@
-/* Dont touch - just for David*/
+/* Variables */
 
-/* Inicio CSS Equipo 1*/
-
-/* Fin CSS Equipo 1*/
-
-
-/* Inicio CSS Equipo 2*/
 :root {
-    --font-main: 'DM Sans';
-    --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    --cursor: pointer;
-    --color-white: #fff;
-    --color-red: #D41443;
-    --color-black: #000000;
+  --font-main: 'DM Sans', sans-serif;
+  --font-off: 'Titan One', cursive;
+  --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  --cursor: pointer;
+  --color-white: #fff;
+  --color__text-red: #D41443;
+  --color__text-black: #000000;
+  --color__bg-pink: #FFB8CA;
+  --color__bg-mustard: #F0D1A5;
+  --color__bg-green: #C2E297;
+  --color__text-off: #907E82;
 }
 
+/* Variables */
+
+/* Reset */
+
 *{
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
+  line-height: normal;
 }
 
 body {
-    font-size: 14px;
-    width: 1600px;
-    margin: 0 auto;
+  font-size: 14px;
+  width: 1200px;
+  margin: 0 auto;
 }
 
 .container {
-    width: 1200px;
-    box-sizing: border-box;
-    margin: 0 auto;
+  width: 1200px;
+  box-sizing: border-box;
+  margin: 0 auto;
 }
 
-/* Dont touch */
+img {
+  display: block;
+}
+
+li {
+  list-style: none;
+}
+
+/* Reset */
 
 
-/* Start to write code from here */
-/* CODE -------- */
+/* Team 001 START */
+
+header>.container {
+  color: #FFFFFF;
+  background-color: var(--color__bg-pink);
+}
+
+.home-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-button>button {
+  font-family: var(--font-main);
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 21px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: var(--color__text-red);
+  background-color: var(--color-white);
+  border-radius: 22px;
+  border: none;
+  padding: 0 37px;
+  height: 44px;
+  cursor: pointer;
+}
+
+.nav-button>button:hover {
+  background-color: #ECEBEB;
+}
+
+.home img {
+  width: 199px;
+  height: 50px;
+  padding: 40px 40px 40px 16px;
+}
+
+nav ul li {
+  display: inline-block;
+  padding: 0 20px;
+  font-family: 'DM Sans', sans-serif;
+  font-size: 16px;
+}
+
+.nav-home {
+  color: var(--color-white);
+}
+
+.nav-home:hover,
+.nav-home:focus {
+  color: var(--color__text-red);
+}
+
+.hero {
+  background-image: url('/images/eat-icecream.png'), url('/images/icecream-header.png'), url('/images/Ellipse-pink3.png');
+  background-repeat: no-repeat;
+  background-position: bottom right, top 108px right 328px, top 54px right 149px;
+  position: relative;
+  padding-top: 37px;
+  padding-bottom: 60px;
+  width: 1168px;
+  margin: 0 auto;
+}
+
+.hero-banner {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 60px;
+}
+
+.hero-button {
+  margin-top: 24px;
+}
+
+.hero-button>button {
+  border: none;
+  font-family: var(--font-main);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
+  text-align: center;
+  margin: 0;
+  cursor: pointer;
+}
+
+.hero-button>button:nth-child(1) {
+  background-color: var(--color__text-red);
+  color: var(--color-white);
+  width: 107px;
+  height: 40px;
+  border-radius: 20px;
+  margin-right: 12px;
+}
+
+.hero-button>button:nth-child(2) {
+  width: 138px;
+  height: 40px;
+  border-radius: 20px;
+  color: var(--color__text-red);
+  background-color: var(--color-white);
+}
+
+.hero-button>button:nth-child(2):hover {
+  background-color: #ECEBEB;
+}
+
+.ice-cream {
+  color: var(--color-white);
+  width: 277px;
+  font-family: var(--font-off);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 37px;
+  line-height: 44px;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+}
+
+.ice-cream>span {
+  font-size: 58px;
+  color: var(--color__text-red);
+  text-align: center;
+}
+
+.section__1>p, header>p{
+  color: #FFFFFF;
+  font-family: 'DM Sans', sans-serif;
+  font-size: 16px;
+}
+
+.milk {
+  position: relative;
+  display: flex;
+  align-items: center;
+  margin-top: 40px;
+}
+
+.milk-text {
+  position: relative;
+}
+
+.milk-text>p {
+  width: 200px;
+  height: 78px;
+  font-family: var(--font-main);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 140%;
+}
+
+.milk-text::after {
+  position: absolute;
+  content: url('/images/arrow-right-milk.png');
+  top: 98px;
+  cursor: pointer;
+}
+
+.hero-right {
+  list-style: none;
+}
+
+.cafes {
+  position: relative;
+  margin-bottom: 18px;
+  right: 18px;
+  z-index: 0;
+}
+
+.cafes>svg {
+  position: absolute;
+  top: -4px;
+  right: -18px;
+  z-index: -1;
+}
+
+.foodtrucks {
+  position: relative;
+  right: 18px;
+  z-index: 0;
+}
+
+.foodtrucks>svg {
+  position: absolute;
+  top: -4px;
+  right: -18px;
+  z-index: -1;
+}
+
+.cafes>h2,
+.foodtrucks>h2 {
+  font-family: var(--font-off);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 46px;
+  line-height: 53px;
+  text-align: right;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: var(--color__text-red);
+}
+
+.cafes>p,
+.foodtrucks>p {
+  font-family: var(--font-main);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
+  text-align: right;
+  color: var(--color-white);
+}
+
+.products {
+  width: 1168px;
+  margin: 60px auto;
+}
+
+.products>p {
+  font-family: 'Titan One', cursive;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 34px;
+  text-align: center;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #FFA5BA;
+}
+
+.products>h2 {
+  font-family: 'Titan One', cursive;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 58px;
+  line-height: 66px;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: var(--color__text-red);
+  margin-top: 16px;
+}
+
+.products-list {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 281px;
+}
+
+.products-item {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 368px;
+  text-align: center;
+  padding-bottom: 60px;
+  border-radius: 24px;
+  padding-top: 165px;
+}
+
+.products-item:nth-child(1) {
+  background-color: var(--color__bg-pink);
+}
+
+.products-item:nth-child(2) {
+  background-color: var(--color__bg-mustard);
+}
+
+.products-item:nth-child(3) {
+  background-color: var(--color__bg-green);
+}
+
+.products-item:nth-child(1)::before {
+  position: absolute;
+  top: -261px;
+  content: url('/images/prod-1.png');
+  width: 100%;
+  height: 394px;
+}
+
+.products-item:nth-child(2)::before {
+  position: absolute;
+  top: -261px;
+  content: url('/images/prod-2.png');
+  width: 100%;
+  height: 394px;
+}
+
+.products-item:nth-child(3)::before {
+  position: absolute;
+  top: -261px;
+  content: url('/images/prod-3.png');
+  width: 100%;
+  height: 394px;
+}
+
+.products-item>h3 {
+  font-family: var(--font-off);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 34px;
+  text-align: center;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: var(--color-white);
+  margin-bottom: 32px;
+}
+
+.products-item>p {
+  font-family: var(--font-main);
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 176%;
+  text-align: center;
+  letter-spacing: 0.04em;
+  color: var(--color-white);
+  width: 241px;
+  height: 106px;
+  margin-top: 32px;
+  margin-bottom: 60px;
+}
+
+.products-item>img {
+  cursor: pointer;
+}
+
+/* Team 001 END */
+
+/* Team 002 START */
+
 
 .tradition_and_love{
-  width: 100%;
-  height: 1229px;
-  background-color: #FFF5F6;
-  display:flex;
-  flex-direction: column;
-  background-image: url(".././images/section.png");
-  background-repeat: no-repeat;
+width: 100%;
+height: 1229px;
+background-color: #FFF5F6;
+display:flex;
+flex-direction: column;
 }
 
 .title{
-  font-family:'Titan One', cursive;
-  font-weight: 400;
-  line-height:30px;
-  text-align: center;
+font-family:'Titan One', cursive;
+font-weight: 400;
+line-height:30px;
+text-align: center;
 }
 
 .main-title{
-  padding-top: 60px;
-  color:#FFA5BA;
-  font-size: 30px;
-  line-height: 34px;
-  letter-spacing: 0.04em;
-  text-align: center;
+padding-top: 60px;
+color:#FFA5BA;
+font-size: 30px;
+line-height: 34px;
+letter-spacing: 0.04em;
+text-align: center;
+margin-bottom: 16px;
 }
 
 .second-title{
-  color: #D41443;
-  font-size: 58px;
-  font-weight: 400;
-  line-height: 66.41px;
-  letter-spacing: 0.06em;
-
-
+color: #D41443;
+font-size: 58px;
+font-weight: 400;
+line-height: 66.41px;
+letter-spacing: 0.06em;
 }
 
 .imag-y-text{
-  display:flex;
+display:flex;
+background-image: url(".././images/section.png");
+background-repeat: no-repeat;
+margin-top: 60px;
 }
 
-
 .paragraph{
-  font-family: 'DM Sans', sans-serif;
-  margin: 150px 0 0 99px;
-  width: 463px;
-  font-weight: 500;
+font-family: 'DM Sans', sans-serif;
+margin: 0 0 0 99px;
+padding-top: 90px;
+width: 463px;
+font-weight: 500;
 }
 
 .paragraph__one{
-  font-size: 16px;
-  line-height: 28px;
-  letter-spacing: 0.04em;
-  text-align: left;
+font-size: 16px;
+line-height: 28px;
+letter-spacing: 0.04em;
+text-align: left;
 }
 
 .paragraph__two{
-  margin-top: 32px;
-  color:#907E82;
-  font-size: 14px;
-  line-height: 27px;
-  text-align: left;
+margin-top: 32px;
+color:#907E82;
+font-size: 14px;
+line-height: 27px;
+text-align: left;
 }
 
-button{
-  margin-top: 40px;
-  width: 176px;
-  height: 44px;
-  background-color: #FFFFFF;
-  border-radius: 22px;
-  font-family:'DM Sans', sans-serif;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 28px;
-  text-align: center;
-  color: #D41443;
+.button{
+margin-top: 40px;
+width: 176px;
+height: 44px;
+background-color: #FFFFFF;
+border-radius: 22px;
+font-family:'DM Sans', sans-serif;
+font-weight: 700;
+font-size: 16px;
+line-height: 28px;
+text-align: center;
+color: #D41443;
+border: none;
 
 }
 
 .second-main{
-  display:flex;
+display:flex;
+width: 1080px;
+margin: 0 auto;
+justify-content: space-between;
+padding-right: 75px;
+}
+
+.second-main_svg {
+margin-bottom: 40px;
 }
 
 .second-main__elements{
-  width: 288px;
+width: 288px;
+margin-top: 60px;
 }
 
 .second-main__elements h2{
-  color: #D41443;
-  font-family: 'Titan One', cursive;
-  font-size: 58px;
-  font-weight: 400;
-  line-height: 66px;
-  letter-spacing: 0.04em;
-  text-align: start;
+color: #D41443;
+font-family: 'Titan One', cursive;
+font-size: 58px;
+font-weight: 400;
+line-height: 66px;
+letter-spacing: 0.04em;
+text-align: start;
 }
 
-.second-main__elements p{
-  font-family: 'DM Sans', sans-serif;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 28px;
-  letter-spacing: 0.02em;
-  text-align: left;
+.second-main__text {
+font-family: 'DM Sans', sans-serif;
+font-size: 16px;
+font-weight: 700;
+line-height: 28px;
+letter-spacing: 0.02em;
+text-align: left;
+margin-top: 16px;
+}
 
+.gallery {
+position: relative;
 }
 
 .colash{
-  width: 1013px;
-  height: 430px;
-  display:flex;
-  align-items: center;
+position: absolute;
+width: 1013px;
+height: 430px;
+display:flex;
+align-items: center;
+left: 90px;
+top: -552px;
+
+}
+
+.colash > :not(:last-child) {
+margin-right: 8px;
+}
+
+.colash_4 {
+margin-top: 9px;
+}
+
+.colash_5 {
+margin-top: -45px;
+}
+
+.colash_6 {
+margin-top: 12px;
 }
 
 .testimony{
-  margin-top: 320px;
-  font-family:'DM Sans', sans-serif;
-  font-weight: 500;
-  text-align: center;
+margin-top: 480px;
+font-family:'DM Sans', sans-serif;
+font-weight: 500;
+text-align: center;
 }
 
 .testimony__image{
-  width:85px;
-  height:85px;
+width:85px;
+height:85px;
+margin: 0 auto;
 }
 
 .testimony__background{
-  width:968px;
-  height:138px;
-  background-color:#FAFAFA;
+display: flex;
+width:968px;
+height:138px;
+background-color:#FAFAFA;
+margin: 0 auto;
+padding: 0 auto;
+justify-content: center;
+margin-top: 16px;
+margin-bottom: 16px;
+}
+
+.testimony__quotation {
+width: 50px;
+height: 50px;
+margin-top: 22px;
 }
 
 .testimony__paragraph{
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 30px;
-  letter-spacing: 0.04em;
-  color:#000000;
+display: flex;
+display: inline-flex;
+font-size: 16px;
+font-weight: 500;
+line-height: 30px;
+letter-spacing: 0.04em;
+color:#000000;
+text-decoration: underline;
+-webkit-text-decoration-color: #e1e1e1;
+text-decoration-color: #e1e1e1;
+align-items: center;
 }
 
 .testimony__name{
-  font-size: 20px;
-  line-height: 37px;
-  letter-spacing: 0em;
-  text-align: center;
-  color: #000000;
+font-size: 20px;
+line-height: 37px;
+letter-spacing: 0;
+text-align: center;
+color: #000000;
+margin-top: 16px;
+margin-bottom: 33px;
 }
-/* Fin CSS Equipo 2*/
 
-/* Inicio CSS Equipo 3*/
 
-/* Fin CSS Equipo 3*/
+/* Team 002 END */
+
+
+/* Team 003 START */
+
+.section__five .container, .footer .container {
+background-color: #FFF5F6;
+}
+
+.section__five .container{
+padding-bottom: 121px;
+}
+
+.section__five {
+position: relative;
+}
+
+.card01,
+.card02,
+.card03 {
+background: var(--color-white);
+box-shadow: 0 8px 30px rgba(212, 20, 67, 0.1);
+border-radius: 24px;
+padding: 40px;
+}
+
+.cards {
+display: flex;
+justify-content: space-between;
+flex-direction: row;
+margin: 0 16px 60px;
+gap: 32px;
+}
+
+.card-tittle {
+font-family: var(--font-main);
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 186%;
+letter-spacing: 0.04em;
+color: var(--color-white);
+border-radius: 6px;
+padding: 5px 15px;
+}
+
+.brown {
+background-color: var(--color__bg-mustard);
+}
+
+.green {
+background-color: var(--color__bg-green);
+}
+
+.info-tittle {
+font-family: var(--font-main);
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 186%;
+letter-spacing: 0.04em;
+color: #000000;
+margin-top: 32px;
+}
+
+.info-descrip {
+font-family: var(--font-main);
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 183%;
+letter-spacing: 0.04em;
+color: #907E82;
+margin-right: 38px;
+margin-top: 8px;
+}
+
+.card__line {
+border: 1px solid #E1E1E1;
+margin: 32px 0;
+}
+
+.info-days {
+font-family: var(--font-main);
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 186%;
+letter-spacing: 0.04em;
+color: #000000;
+}
+
+.info-time {
+font-family: var(--font-main);
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 186%;
+color: var(--color__bg-pink);
+}
+
+.margin-down {
+margin-bottom: 12px;
+}
+
+.card-information {
+display: block;
+font-family: var(--font-main);
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 183%;
+color: #907E82;
+transition: var(--transition);
+}
+
+.card-information:hover,
+.card-information:focus {
+color: var(--color__text-red);
+}
+
+.seccion__buttoms {
+display: flex;
+justify-content: center;
+gap: 12px;
+}
+
+.content__button {
+display: flex;
+justify-content: center;
+}
+
+.button-text {
+font-family: var(--font-main);
+font-style: normal;
+font-weight: 700;
+font-size: 16px;
+line-height: normal;
+display: flex;
+align-items: center;
+text-align: center;
+margin-right: 13px;
+}
+
+.buttom-left, .buttom-right {
+display: block;
+border-radius: 22px;
+border: none;
+cursor: pointer;
+}
+
+.buttom-left {
+color: var(--color-white);
+background: #D41342;
+width: 198px;
+height: 44px;
+}
+
+.buttom-right {
+color: var(--color__text-red);
+background: var(--color-white);
+width: 168px;
+height: 44px;
+transition: var(--transition);
+}
+
+.buttom-right:hover,
+.buttom-right:focus {
+background: #ECEBEB;
+}
+
+.icon-flecha-1 {
+width: 10px;
+height: 16px;
+fill: none;
+stroke-width: 6px;
+stroke: var(--color-white);
+margin: auto 0;
+}
+
+.icon-flecha-2 {
+width: 10px;
+height: 16px;
+fill: none;
+stroke-width: 6px;
+stroke: var(--color__text-red);
+margin: auto 0;
+}
+
+.footermain {
+display: flex;
+justify-content: space-between;
+flex-direction: row;
+margin: 0 17px 60px;
+}
+
+.footer__tittle p {
+font-family: var(--font-off);
+font-style: normal;
+letter-spacing: 0.06em;
+text-transform: uppercase;
+}
+
+.tittle_one {
+font-size: 30px;
+line-height: 34px;
+letter-spacing: 0.04em;
+color: var(--color__bg-pink);
+}
+
+.tittle_two {
+font-size: 58px;
+line-height: 66px;
+letter-spacing: 0.06em;
+color: var(--color__text-red);
+}
+
+.footer_contact {
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+}
+
+.contact-social {
+display: flex;
+justify-content: flex-end;
+gap: 30px;
+}
+
+.social__link {
+display: block;
+line-height: 0;
+}
+
+.icon-telegram,
+.icon-git,
+.icon-fb{
+width: 34px;
+height: 34px;
+fill: #FEA5BB;
+transition: var(--transition);
+}
+
+.icon-telegram:hover,
+.icon-git:hover,
+.icon-fb:hover,
+.icon-telegram:focus,
+.icon-git:focus,
+.icon-fb:focus{
+
+fill: var(--color__text-red);
+}
+
+
+.contact__phone {
+font-family: var(--font-main);
+font-style: normal;
+font-weight: 700;
+font-size: 16px;
+line-height: 186%;
+letter-spacing: 0.02em;
+color: var(--color__text-black);
+}
+
+.contact__phone a {
+color: var(--color__text-red);
+}
+
+.footer__line {
+border: 1px solid #E1E1E1;
+margin: 0 17px;
+}
+
+.nameCreator {
+font-family: var(--font-main);
+font-style: normal;
+font-weight: 700;
+font-size: 14px;
+line-height: 186%;
+letter-spacing: 0.02em;
+color: #907E82;
+display: flex;
+justify-content: center;
+}
