correccion gap y uppcase

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -35,15 +35,16 @@ body {
 .advantages__tile {
   font-family: 'Titan One', cursive;
   font-style: normal;
+  font-weight: 400;
   font-size: 36px;
   line-height: 41px;
   letter-spacing: 0.04em;
-  text-transform: uppercase;
   color: var(--advantages-title-color);
   margin: 0;
   width: 98px;
   height: 56px;
   margin-bottom: 4px;
+  gap: 90px;
 }
 
 .advantages__descriptions {
