se agrega gap a section 1200 px

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -44,7 +44,7 @@ body {
   width: 98px;
   height: 56px;
   margin-bottom: 4px;
-  gap: 90px;
+
 }
 
 .advantages__descriptions {
@@ -140,6 +140,9 @@ body {
     width: 1200px;
   }
 
+  .advantages__section {
+    gap: 90px;
+  }
 
 
   .advantages--title_1  {
