--- a/css/styles.css
+++ b/css/styles.css
@@ -319,14 +319,14 @@ body {
 }
 
 .container {
-  width: 768px;
+  width: 480px;
   box-sizing: border-box;
   margin: 0 auto;
 }
 
 .tradition_and_love{
   width: 100%;
-  height: 1229px;
+  height: 1564px;
   background-color: #FFF5F6;
   display:flex;
   flex-direction: column;
@@ -342,27 +342,27 @@ body {
 .main-title{
   padding-top: 60px;
   color:#FFA5BA;
-  font-size: 30px;
-  line-height: 34px;
+  font-size: 18px;
+  line-height: 21px;
   letter-spacing: 0.04em;
   text-align: center;
-  margin-bottom: 16px;
+  margin-bottom: 15px;
 }
 
 .second-title{
   color: #D41443;
-  font-size: 58px;
+  font-size: 34px;
   font-weight: 400;
-  line-height: 66.41px;
-  letter-spacing: 0.06em;
+  line-height: 39px;
+  letter-spacing: 0.04em;
 }
 
 .imag-y-text{
-  display:flex;
+  display:block;
   background-image: url(".././images/section.png");
   background-size: contain;
   background-repeat: no-repeat;
-  margin-top: 60px;
+  margin-top: 32px;
 }
 
 .image_tradition{
@@ -373,91 +373,91 @@ body {
 
 .paragraph{
   font-family: 'DM Sans', sans-serif;
-  margin: 0px 0 0 99px;
-  padding-top: 90px;
-  width: 463px;
+  margin: 0px 0 0 20px;
+  padding-top: 40px;
+  width: 220px;
   font-weight: 500;
 }
 
 .paragraph__one{
-  font-size: 16px;
-  line-height: 28px;
+  font-size: 12px;
+  line-height: 19px;
   letter-spacing: 0.04em;
   text-align: left;
 }
 
 .paragraph__two{
-  margin-top: 32px;
+  margin-top: 48px;
   color:#907E82;
-  font-size: 14px;
-  line-height: 27px;
+  font-size: 12px;
+  line-height: 19px;
   text-align: left;
 }
 
 .paragraph button{
-  margin-top: 40px;
+  margin-top: 20px;
   width: 176px;
   height: 44px;
   background-color: #FFFFFF;
   border-radius: 22px;
   font-family:'DM Sans', sans-serif;
   font-weight: 700;
-  font-size: 16px;
-  line-height: 41px;
+  font-size: 14px;
+  line-height: none;
   text-align: center;
   color: #D41443;
   border: none;
 }
 
 .second-main{
-  display:flex;
-  width: 1080px;
+  display:block;
+  width: 230px;
   margin: 0 auto;
   justify-content: space-between;
-  padding-right: 75px;
+  padding-right: 200px;
 }
 
 .second-main_svg {
-  width: 50px ;
-  height: 50px;
-  margin-bottom: 40px;
+  width: 33px ;
+  height: 29.59px;
+  margin-bottom: 16px;
 }
 
 .second-main_svg2{
   width: 49.69px ;
   height: 50px;
-  margin-bottom: 40px;
+  margin-bottom: 16px;
 }
 
 .second-main_svg3{
   width: 44px ;
   height: 50px;
-  margin-bottom: 40px;
+  margin-bottom: 16px;
 }
 
 .second-main__elements{
-  width: 288px;
-  margin-top: 60px;
+  width: 230px;
+  margin-top: 40px;
 }
 
 .second-main__title{
   color: #D41443;
   font-family: 'Titan One', cursive;
-  font-size: 58px;
+  font-size: 36px;
   font-weight: 400;
-  line-height: 66px;
+  line-height: 41px;
   letter-spacing: 0.04em;
   text-align: start;
 }
 
 .second-main__text {
   font-family: 'DM Sans', sans-serif;
-  font-size: 16px;
+  font-size: 12px;
   font-weight: 700;
-  line-height: 28px;
+  line-height: 20px;
   letter-spacing: 0.02em;
   text-align: left;
-  margin-top: 16px;
+  margin-top: 4px;
 }
 
 .gallery {
@@ -466,12 +466,12 @@ body {
 
 .colash{
   position: absolute;
-  width: 1013px;
-  height: 430px;
+  width: 320px;
+  height: 136px;
   display:flex;
   align-items: center;
   left: 90px;
-  top: -552px;
+  top: -90px;
 }
 
 .image_min{
@@ -485,7 +485,7 @@ body {
 }
 
 .colash > :not(:last-child) {
-  margin-right: 8px;
+  margin-right: 2.53px;
 }
 
 .colash_4 {
@@ -501,7 +501,7 @@ body {
 }
 
 .testimony{
-  margin-top: 480px;
+  margin-top: 70px;
   font-family:'DM Sans', sans-serif;
   font-weight: 500;
   text-align: center;
@@ -510,39 +510,39 @@ body {
 .testimony__image{
   width:85px;
   height:85px;
-  margin: 0 auto 16px;
+  margin: 100px auto 32px;
 }
 
 .testimony__background{
   position: relative;
   display: flex;
-  width: 620px;
-  height: 164px;
+  width: 280px;
+  height: 308px;
   background-color:#FAFAFA;
-  margin: 0 auto 16px;
+  margin: 0 auto 36px;
   justify-content: center;
-  padding-top: 16px;
-  padding-bottom: 16px;
+  padding-top: 43px;
+  padding-bottom: 26px;
 }
 
 .testimony__quotation {
   position: absolute;
-  width: 50px;
-  height: 50px;
-  left: 74px;
-  top: 45px;
+  width: 54px;
+  height: 40px;
+  left: 47px;
+  top: 75px;
 }
 
 .container_paragraph{
   position: absolute;
   margin-top: 47px;
-  width: 750px;
+  width: 157px;
 }
 
 .testimony__paragraph{
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 500;
-  line-height: 30px;
+  line-height: 31px;
   letter-spacing: 0.04em;
   color:#000000;
   align-items: center;
@@ -550,13 +550,13 @@ body {
 }
 
 .testimony__name{
-  font-size: 20px;
-  line-height: 37px;
+  font-size: 14px;
+  line-height: 26px;
   letter-spacing: 0;
   text-align: center;
   color: #000000;
   margin-top: 16px;
-  margin-bottom: 33px;
+  margin-bottom: 16px;
 }
 }
 
@@ -691,7 +691,7 @@ body {
   width: 570px;
   margin: 0 auto;
   justify-content: space-between;
-  padding-right: 75px;
+  padding-right: 150px;
 }
 
 .second-main_svg {
@@ -714,7 +714,7 @@ body {
 
 .second-main__elements{
   width: 180px;
-  margin-top: -70px;
+  margin-top: 80px;
 }
 
 .second-main__title{
