--- a/css/styles.css
+++ b/css/styles.css
@@ -110,26 +110,6 @@ nav ul li {
   display: none;
 }
 
-@media (max-width: 768px){
-  
-  .home-container { 
-    padding: 32px;
-  }
-
-  .menu {
-    display: block;
-  }
-
-  ul {
-    position: fixed;
-    width: 254px;
-    height: 1020px;
-    right: 100%;
-    background: var(--color-red);
-  }
-
-}
-
 .hero {
   background-image: url('/images/eat-icecream.png'), url('/images/icecream-header.png'), url('/images/Ellipse-pink3.png');
   background-repeat: no-repeat;
@@ -405,6 +385,34 @@ p {
 
 .products-item>img {
   cursor: pointer;
+}
+
+@media screen and (min-width: 480px) and (max-width: 768px) {
+
+  body {
+    max-width: 768px;
+  }
+
+  .hero {
+    padding: 32px;
+  }
+
+  .hero-banner {
+    margin-top: 20px;
+  }
+
+  .menu {
+    display: block;
+  }
+
+  ul {
+    position: fixed;
+    width: 254px;
+    height: 1020px;
+    right: 100%;
+    background: var(--color-red);
+  }
+
 }
 
 
