--- a/css/styles.css
+++ b/css/styles.css
@@ -388,33 +388,66 @@ p {
 }
 
 @media screen and (min-width: 480px) and (max-width: 768px) {
-
   body {
-    max-width: 768px;
+    width: 768;
   }
 
-  .hero {
-    padding: 32px;
+  .container {
+    width: 768;
   }
 
-  .hero-banner {
-    margin-top: 20px;
+  .products {
+    width: 704px;
+    margin: 60px 32px;
   }
 
-  .menu {
-    display: block;
+  .products>p {
+    font-size: 26px;
+    line-height: 30px;
   }
 
-  ul {
-    position: fixed;
-    width: 254px;
-    height: 1020px;
-    right: 100%;
-    background: var(--color-red);
+  .products>h2 {
+    font-size: 48px;
+    line-height: 55px;
+    letter-spacing: 0.04em;
+    margin-top: 18px;
   }
 
+  .products-list {
+    margin-top: 158px;
+  }
+
+  .products-item {
+    width: 224px;
+    padding-bottom: 40px;
+    padding-top: 118px;
+  }
+
+  .products-item:nth-child(1)::before {
+    top: -138px;
+  }
+
+  .products-item:nth-child(2)::before {
+    top: -138px;
+  }
+
+  .products-item:nth-child(3)::before {
+    top: -138px;
+  }
+
+  .products-item>h3 {
+    font-size: 20px;
+    line-height: 23px;
+  }
+
+  .products-item>p {
+    font-size: 14px;
+    line-height: 176%;
+    width: 160px;
+    height: 150px;
+    margin: 32px 0px;
+  }
 }
-
 
 /* Fin CSS Equipo 1*/
 
