--- a/css/styles.css
+++ b/css/styles.css
@@ -1,38 +1,11 @@
 /* Dont touch - just for David*/
+
+/* Inicio CSS Equipo 1*/
 :root {
-  --font-main: 'DM Sans';
-  --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  --cursor: pointer;
-  --color-white: #fff;
-  --color-red: #D41443;
-  --color-black: #000000;
   --color-pink: #FFB8CA;
   --color-mustard: #F0D1A5;
   --color-green: #C2E297;
 }
-
-* {
-  padding: 0;
-  margin: 0;
-}
-
-a {
-  text-decoration: none;
-}
-
-body {
-  font-size: 14px;
-  width: 1600px;
-  margin: 0 auto;
-}
-
-.container {
-  width: 1200px;
-  box-sizing: border-box;
-  margin: 0 auto;
-}
-
-/* Inicio CSS Equipo 1*/
 
 header>.container {
   color: #FFFFFF;
@@ -45,8 +18,7 @@ header>.container {
   align-items: center;
 }
 
-.nav-button {
-  position: relative;
+.nav-button>button {
   font-family: 'DM Sans';
   font-style: normal;
   font-weight: 700;
@@ -65,13 +37,8 @@ header>.container {
   cursor: pointer;
 }
 
-.nav-button:hover {
+.nav-button>button:hover {
   background-color: #ECEBEB;
-}
-
-.nav-button>svg {
-  margin-top: 2px;
-  margin-left: 12px;
 }
 
 .home img {
@@ -95,39 +62,6 @@ nav ul li {
 .nav-home:hover,
 .nav-home:focus {
   color: var(--color-red);
-}
-
-.menu {
-  float: right;
-  text-align: center;
-  padding-top: 43px;
-  margin-right: 14px;
-  cursor: pointer;
-  display: none;
-}
-
-#cones-menu {
-  display: none;
-}
-
-@media (max-width: 768px){
-  
-  .home-container { 
-    padding: 32px;
-  }
-
-  .menu {
-    display: block;
-  }
-
-  ul {
-    position: fixed;
-    width: 254px;
-    height: 1020px;
-    right: 100%;
-    background: var(--color-red);
-  }
-
 }
 
 .hero {
@@ -184,23 +118,7 @@ nav ul li {
   background-color: #ECEBEB;
 }
 
-.ice-cream {
-  color: var(--color-white);
-  width: 277px;
-  font-family: 'Titan One';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 37px;
-  line-height: 44px;
-  letter-spacing: 0.04em;
-  text-transform: uppercase;
-}
-
-.ice-cream>span {
-  font-size: 58px;
-  color: var(--color-red);
-  text-align: center;
-}
+ICECREAM
 
 p {
   color: #FFFFFF;
@@ -243,27 +161,31 @@ p {
 .cafes {
   position: relative;
   margin-bottom: 18px;
-  right: 18px;
+  padding-right: 18px;
   z-index: 0;
 }
 
-.cafes>svg {
+.cafes::before {
   position: absolute;
+  content: url('/images/white-circle.png');
+  background-repeat: no-repeat;
   top: -4px;
-  right: -18px;
+  right: 0;
   z-index: -1;
 }
 
 .foodtrucks {
   position: relative;
-  right: 18px;
+  padding-right: 18px;
   z-index: 0;
 }
 
-.foodtrucks>svg {
+.foodtrucks::before {
   position: absolute;
+  content: url('/images/white-circle.png');
+  background-repeat: no-repeat;
   top: -4px;
-  right: -18px;
+  right: 0;
   z-index: -1;
 }
 
@@ -291,6 +213,30 @@ p {
   color: var(--color-white);
 }
 
+.menu {
+  float: right;
+  left: 524px;
+  top: 46px;
+  cursor: pointer;
+  display: none;
+}
+
+#check-menu {
+  display: none;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1280px) {
+  
+  body{
+    padding: ;
+  }
+
+  .hero {
+    padding: 32px;
+  }
+}
+
+/*
 .products {
   width: 1168px;
   margin: 60px auto;
@@ -407,14 +353,39 @@ p {
   cursor: pointer;
 }
 
-
 /* Fin CSS Equipo 1*/
 
 
 /* Inicio CSS Equipo 2*/
+:root {
+  --font-main: 'DM Sans';
+  --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  --cursor: pointer;
+  --color-white: #fff;
+  --color-red: #D41443;
+  --color-black: #000000;
+}
 
+* {
+  padding: 0;
+  margin: 0;
+}
 
+a {
+  text-decoration: none;
+}
 
+body {
+  font-size: 14px;
+  width: 1600px;
+  margin: 0 auto;
+}
+
+.container {
+  width: 1200px;
+  box-sizing: border-box;
+  margin: 0 auto;
+}
 
 /* Dont touch */
 
@@ -422,7 +393,7 @@ p {
 /* Start to write code from here */
 /* CODE -------- */
 
-/*.tradition_and_love {
+.tradition_and_love {
   width: 100%;
   height: 1229px;
   background-color: #FFF5F6;
@@ -552,7 +523,7 @@ p {
   letter-spacing: 0em;
   text-align: center;
   color: #000000;
-}*/
+}
 
 /* Fin CSS Equipo 2*/
 
