--- a/css/styles.css
+++ b/css/styles.css
@@ -406,7 +406,7 @@ header>p {
 /* Team 002 START */
 
 
-/*.tradition_and_love {
+.tradition_and_love {
   width: 100%;
   height: 1229px;
   background-color: #FFF5F6;
@@ -414,8 +414,8 @@ header>p {
   flex-direction: column;
 }
 
-.title{
-  font-family:var(--font-off);
+.title {
+  font-family: var(--font-off);
   font-weight: 400;
   line-height: 30px;
   text-align: center;
@@ -431,7 +431,7 @@ header>p {
   margin-bottom: 16px;
 }
 
-.second-title{
+.second-title {
   color: var(--color__text-red);
   font-size: 58px;
   font-weight: 400;
@@ -439,21 +439,21 @@ header>p {
   letter-spacing: 0.06em;
 }
 
-.imag-y-text{
-  display:flex;
+.imag-y-text {
+  display: flex;
   background-image: url(".././images/section.png");
   background-size: contain;
   background-repeat: no-repeat;
   margin-top: 60px;
 }
 
-.image_tradition{
+.image_tradition {
   margin-top: 40px;
   width: 501px;
   height: 501px;
 }
 
-.paragraph{
+.paragraph {
   font-family: var(--font-main);
   margin: 0 0 0 99px;
   padding-top: 90px;
@@ -476,7 +476,7 @@ header>p {
   text-align: left;
 }
 
-.paragraph button{
+.paragraph button {
   margin-top: 40px;
   width: 176px;
   height: 44px;
@@ -491,8 +491,8 @@ header>p {
   border: none;
 }
 
-.second-main{
-  display:flex;
+.second-main {
+  display: flex;
   width: 1080px;
   margin: 0 auto;
   justify-content: space-between;
@@ -500,29 +500,29 @@ header>p {
 }
 
 .second-main_svg {
-  width: 50px ;
+  width: 50px;
   height: 50px;
   margin-bottom: 40px;
 }
 
-.second-main_svg2{
-  width: 49.69px ;
+.second-main_svg2 {
+  width: 49.69px;
   height: 50px;
   margin-bottom: 40px;
 }
 
-.second-main_svg3{
-  width: 44px ;
+.second-main_svg3 {
+  width: 44px;
   height: 50px;
   margin-bottom: 40px;
 }
 
-.second-main__elements{
+.second-main__elements {
   width: 288px;
   margin-top: 60px;
 }
 
-.second-main__title{
+.second-main__title {
   color: var(--color__text-red);
   font-family: var(--font-off);
   font-size: 58px;
@@ -546,7 +546,7 @@ header>p {
   position: relative;
 }
 
-.colash{
+.colash {
   position: absolute;
   width: 1013px;
   height: 430px;
@@ -556,7 +556,7 @@ header>p {
   top: -552px;
 }
 
-.colash > :not(:last-child) {
+.colash> :not(:last-child) {
   margin-right: 8px;
 }
 
@@ -572,25 +572,25 @@ header>p {
   margin-top: 12px;
 }
 
-.testimony{
+.testimony {
   margin-top: 480px;
   font-family: var(--font-main);
   font-weight: 500;
   text-align: center;
 }
 
-.testimony__image{
-  width:85px;
-  height:85px;
+.testimony__image {
+  width: 85px;
+  height: 85px;
   margin: 0 auto 16px;
 }
 
-.testimony__background{
+.testimony__background {
   position: relative;
   display: flex;
   width: 968px;
   height: 138px;
-  background-color:#FAFAFA;
+  background-color: #FAFAFA;
   margin: 0 auto 16px;
   justify-content: center;
   padding-top: 16px;
@@ -606,7 +606,7 @@ header>p {
   top: 45px;
 }
 
-.container_paragraph{
+.container_paragraph {
   position: absolute;
   margin-top: 47px;
   width: 750px;
