css-hero-header

--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -9,82 +9,67 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
     <!-- normalizer -->
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="/src/partials/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Titan+One&display=swap"
       rel="stylesheet"
     />
   </head>
 
   <body>
     <!-- Hero-header -->
-    <header>
-      <div>
+    <header class="container images">
+      <div class="header-first">
         <a href="">
           <img src="/src/images/group.png" alt="logo" />
         </a>
-        <h3>ICECREAM</h3>
         <nav>
-          <ul>
-            <li><a href="Home">Home</a></li>
-            <li><a href="About us">About us</a></li>
-            <li><a href="How it's made">How it's made?</a></li>
-            <li><a href="our products">Our Products</a></li>
-            <li><a href="contact">Contact</a></li>
-          </ul>
-          <button class="button" type="submit">Buy now ></button>
+          <div class="header-first-nav">
+            <a class="nav-text-first" href="Home">Home</a>
+            <a class="nav-text" href="About us">About us</a>
+            <a class="nav-text" href="How it's made">How it's made?</a>
+            <a class="nav-text" href="our products">Our Products</a>
+            <a class="nav-text-second" href="contact">Contact</a>
+          </div>
         </nav>
+        <button class="nav-button" type="submit">Buy now ></button>
       </div>
-      <div>
-        <div>
-          <h2>ICE CREAM MADE WITH</h2>
-          <h1>PASSION</h1>
-          <button class="button" type="submit">Products</button>
-          <button class="button" type="submit">How it's made?</button>
+
+      <div class="header-presentation">
+        <div class="title-button">
+          <h2 class="text-ice">ICE CREAM<br>MADE WITH</h2>
+          <h1 class="text-passion">PASSION</h1>
+         
         </div>
-        <div>
-          <a href="">
-            <img src="/src/images/milk.png" alt="milk" />
-          </a>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit, sed do
-            eismod tempor incididunt ut labore et
-          </p>
-          <a href="">
-            <img src="/src/images/arrow.png" alt="arrow" />
-          </a>
+
+        <div class="amount">
+          <div>
+            <h2 class="text-number">16</h2>
+            <p class="text-amount">cafes</p>
+          </div>
+          <div>
+            <h2 class="text-number">23</h2>
+            <p class="text-amount">food trucks</p>
+          </div>
         </div>
       </div>
 
-      <div>
-        <!-- big ice cream cone image -->
-        <a href="">
-          <img src="/src/images/cream-cone.png" alt="big-icecream" />
-        </a>
+      <div class="buttons">
+        <button class="products" type="submit">Products</button>
+        <button class="how" type="submit">How it's made?</button>
       </div>
 
-      <div>
-        <div>
-          <a href="">
-            <img src="/src/images/circle.png" alt="circle" />
-          </a>
-          <h2>16</h2>
-          <p>cafes</p>
-        </div>
-        <div>
-          <a href="">
-            <img src="/src/images/circle.png" alt="circle" />
-          </a>
-          <h2>23</h2>
-          <p>food trucks</p>
-        </div>
-        <div>
-          <a href="">
-            <img src="/src/images/sooo-tasty1.jpg" alt="sooo-tasty" />
-          </a>
-        </div>
+
+
+      <div class="paragraphs">
+        <p class="texts">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit, sed do eismod
+          tempor incididunt ut labore et
+        </p>
       </div>
     </header>
   </body>
