--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -9,11 +9,11 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
     <!-- normalizer -->
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="/src/partials/styles4about.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Titan+One&display=swap"
       rel="stylesheet"
     />
   </head>
