--- a/src/partials/styles4about.css
+++ b/src/partials/styles4about.css
@@ -21,9 +21,10 @@ font-family: 'Titan One', cursive;
 
    /* HERO-HEADER-CLASS*/
 
-.container {
+.container-about {
     width: 1200px;
+    height: 1229px;
     margin-left: 40px;
     margin-right: 40px;
-    background: #FFB8CA;
+    background: #FFF5F6;
 }
