--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -21,7 +21,7 @@
   <body>
     <main>
       <!-- Section About (how it's made ?) -->
-      <div class="container-about">
+      <div class="container-about images-about">
         <div>
           <h3>TRADITION AND LOVE</h3>
           <h1>HOW IT'S MADE ?</h1>
