--- a/src/partials/styles4about.css
+++ b/src/partials/styles4about.css
@@ -19,7 +19,7 @@ font-family: 'Titan One', cursive;
 
   }
 
-   /* HERO-HEADER-CLASS*/
+ /* about-section-CLASS*/
 
 .container-about {
     width: 1200px;
@@ -27,4 +27,239 @@ font-family: 'Titan One', cursive;
     margin-left: 40px;
     margin-right: 40px;
     background: #FFF5F6;
+}
+
+.images-about {  
+    background-image:url("/src/images/rectangle4milk.png");
+    background-repeat: no-repeat;
+    background-size: 1200px 521px;
+    background-position:0px 236px;
+}
+
+
+
+  /* HERO-HEADER-CLASS*/
+
+
+
+
+
+.images {
+    background-image:url("/src/images/cream4cone.png"), url("/src/images/soootasty.png"), url("/src/images/bigcircle.png"), url("/src/images/milk.png"), url("/src/images/circle.png"), url("/src/images/circle.png"), url("/src/images/arrow.png");
+    background-repeat: no-repeat, no-repeat, no-repeat, no-repeat, no-repeat,no-repeat;
+    background-size: 236px 557px, 304px 241px, 534px 534px, 213px 216px, 30px 30px, 30px 30px, 26px 26px;
+    background-position: 636px 115px, 880px 423px, 517px 54px, 16px 388px, 1154px 152px, 1154px 240px, 233px 554px;   
+}
+
+
+/*first-content*/
+
+.header-first {
+    display: flex;
+    justify-content: space-between;
+    margin-left: 16px;
+    margin-right: 16px;
+    padding-top: 37px;
+    align-items: center;
+}
+
+.header-first-nav {
+    display: flex;
+    justify-content: center;
+}
+
+.nav-text-first {
+    color:#D41443;
+    font-family: 'DM Sans', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 21px;  
+    margin-right: 50px;  
+}
+.nav-text-second {
+    color:#FFFFFF;
+    font-family: 'DM Sans', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 21px;
+    margin-right: 0px;
+}
+
+.nav-text-second:hover {
+    color:#D41443;
+    cursor: pointer;
+}
+
+.nav-text {
+    color:#FFFFFF;
+    font-family: 'DM Sans', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 21px;
+    margin-right: 50px; 
+    
+}
+.nav-text:hover {
+    color:#D41443;
+    cursor: pointer;
+}
+
+ .nav-button {
+    background:#FFFFFF;
+    color:#D41443;
+    border: none;
+    height: 44px;
+    width: 159px;
+    left: 1025px;
+    top: 40px;
+    border-radius: 22px;
+    font-family: 'DM Sans', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 21px;
+    cursor: pointer;
+    } 
+
+/*first-content*/
+    
+.header-presentation{
+display: flex;
+justify-content: space-between;
+}
+
+.title-button {
+margin-left: 16px;
+width: 277px;
+padding-bottom: 12px;
+margin-top: 70px;
+}
+ 
+.text-ice {
+    color:#FFFFFF;
+    font-family: 'Titan One', cursive;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 38px;
+    line-height: 44px;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.text-passion {
+    display:inline;
+    color:#D41443;
+    font-family: 'Titan One', cursive;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 58px;
+    line-height: 58px;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    padding-top: 0px;
+    padding-top: 0px;
+}
+
+            
+.amount {
+    display:flex;
+    flex-direction: column;
+margin-right: 16px;
+position:absolute;
+top: 160px;
+left: 1145px;
+}
+
+.text-number {
+    color:#D41443;
+    font-family: 'Titan One', cursive;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 46px;
+    line-height: 44px;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    padding-top: 0px;
+    text-align: right;
+    margin-top: 0px;
+    margin-bottom: 0px;
+ }
+
+ .text-amount {
+    color:#FFFFFF;
+    font-family: 'DM Sans', sans-serif;
+    width: 78px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18px;
+    margin-right: 0px;
+    text-align: right;
+ }
+
+
+/*second-content*/
+
+.buttons {
+display: flex;
+margin-left: 16px;
+margin-top: 18px;
+}
+
+.buttons .products {
+    background:#D41443;
+    color:#FFFFFF;
+    border: none;
+    height: 40px;
+    width: 107px;
+    left: 1025px;
+    top: 40px;
+    border-radius: 20px;
+    font-family: 'DM Sans', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18px;
+    cursor: pointer;
+    margin-right: 12px;
+
+   }
+
+
+.buttons .how {
+    background:#FFFFFF;
+    color:#D41443;
+    border: none;
+    height: 40px;
+    width: 138px;
+    left: 1025px;
+    top: 40px;
+    border-radius: 20px;
+    font-family: 'DM Sans', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18px;
+    cursor: pointer;
+}
+
+.paragraphs {
+    width: 200px;
+    position: absolute;
+    top: 436px;
+    left: 272px;
+
+}
+.paragraphs .texts {
+    font-family: 'DM Sans', sans-serif;
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 140%;
+color: #FFFFFF;
 }
