waiting-for-corrections

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -22,68 +22,46 @@
     <main>
       <!-- Section About (how it's made ?) -->
       <div class="container-about images-about">
-        <div>
-          <h3>TRADITION AND LOVE</h3>
-          <h1>HOW IT'S MADE ?</h1>
+        <div class="about-titles">
+          <h3 class="about-first-text">TRADITION AND LOVE</h3>
+          <h1 class="about-second-text">HOW IT'S MADE ?</h1>
         </div>
 
-        <div>
-          <a href="">
-            <img
-              src="/src/images/rectanle-milk.png"
-              alt="rectrangle-milk"
-              width="1200"
-            />
-          </a>
-          <a href="">
-            <img
-              src="/src/images/cow-and-milk.png"
-              alt="cow and milk picture"
-              width="501"
-            />
-          </a>
-        </div>
-
-        <div>
-          <p>
+        <div class="about-paragraphs">
+          <p class="first-paragraph">
             Fusce ut velit laoreet, tempus arcu eu, molestie tortor. <br />
             Nam vel justo cursus, faucibus lorem eget, egestaseros.<br />
-            Maecenas elefend erat at justo fringilla.
+            Maecenas elefend erat at justo fringilla.<br>
           </p>
-          <p>
+          <p class="second-paragraph">
             Curabitur lacina enim at ex blandit, vel pellentesque odio <br />
             elementum. Mauris rhoncus orci in imperdiet placerat. <br />
             Vestibulum euismod nisl suscipt ligula volutpat, a feugiat urna
             <br />
-            maximus. Creas massa nibh, tincidunt.
+            maximus. Creas massa nibh, tincidunt.<br><br>
+            Aliquam erat volutpat. Aenean accumsan.
           </p>
-          <p>Aliquam erat volutpat. Aenean accumsan.</p>
-          <button class="button" type="submit">Read more ></button>
         </div>
-        <div>
-          <a href="">
-            <img src="/src/images/721picture.png" alt="picture" width="50" />
-          </a>
-          <h1>721</h1>
-          <p>
+
+        <button class="about-button" type="submit">Read more ></button>
+
+        <div class="about-describing-one">
+          <h1 class="text-one">721</h1>
+          <p class="text-two">
             Aliquam ac dui vel dui vaulptate <br />consectetur. Mauris massa
           </p>
         </div>
-        <div>
-          <a href="">
-            <img src="/src/images/16kg-picture.png" alt="picture" width="50" />
-          </a>
-          <h1>16 Kg</h1>
-          <p>
+
+        <div class="about-describing-two">
+          <h1 class="text-one">16 Kg</h1>
+          <p class="text-two">
             Aliquam ac dui vel dui vaulptate <br />consectetur. Mauris massa
           </p>
         </div>
-        <div>
-          <a href="">
-            <img src="/src/images/84picture.png" alt="picture" width="50" />
-          </a>
-          <h1>84</h1>
-          <p>
+
+        <div class="about-describing-three">
+          <h1 class="text-one">84</h1>
+          <p class="text-two">
             Aliquam ac dui vel dui vaulptate <br />consectetur. Mauris massa
           </p>
         </div>
