--- a/src/partials/styles4about.css
+++ b/src/partials/styles4about.css
@@ -4,117 +4,103 @@
   box-sizing: border-box;
   }
 
-.pip {
-    font-family: 'DM Sans', sans-serif;
-font-family: 'Titan One', cursive;
-}
   a { text-decoration: none;}
 
   ul { list-style: none;}
   
-  /* Variables*/
-
-  :root {
-    --general-color:#FFFFFF; 
-
-  }
-
+  
  /* about-section-CLASS*/
 
 .container-about {
     width: 1200px;
     height: 1229px;
-    margin-left: 40px;
-    margin-right: 40px;
     background: #FFF5F6;
 }
 
 .images-about {  
-    background-image:url("/src/images/rectangle4milk.png");
-    background-repeat: no-repeat;
-    background-size: 1200px 521px;
-    background-position:0px 236px;
+    background-image:url("/src/images4about/rectangle4milk.png"), url("/src/images4about/cow4milk.png"), url("/src/images4about/721picture.png"), url("/src/images4about/16kgpicture.png"), url("/src/images4about/84picture.png");
+    background-repeat: no-repeat, no-repeat, no-repeat, no-repeat, no-repeat;
+    background-size: 1200px 521px, 501px 501px, 50px 50px, 50px 50px, 44px 50px;
+    background-position: 0px 236px, 16px 236px, 16px 797px, 416px 797px, 816px 797px; 
 }
 
+ /* about-section-CLASS*/
 
-
-  /* HERO-HEADER-CLASS*/
-
-
-
-
-
-.images {
-    background-image:url("/src/images/cream4cone.png"), url("/src/images/soootasty.png"), url("/src/images/bigcircle.png"), url("/src/images/milk.png"), url("/src/images/circle.png"), url("/src/images/circle.png"), url("/src/images/arrow.png");
-    background-repeat: no-repeat, no-repeat, no-repeat, no-repeat, no-repeat,no-repeat;
-    background-size: 236px 557px, 304px 241px, 534px 534px, 213px 216px, 30px 30px, 30px 30px, 26px 26px;
-    background-position: 636px 115px, 880px 423px, 517px 54px, 16px 388px, 1154px 152px, 1154px 240px, 233px 554px;   
+.about-titles {
+    padding-top: 60px;
+    margin: 0 auto;
+    width: 560px;
+    height: 100px;
 }
 
-
-/*first-content*/
-
-.header-first {
-    display: flex;
-    justify-content: space-between;
-    margin-left: 16px;
-    margin-right: 16px;
-    padding-top: 37px;
-    align-items: center;
-}
-
-.header-first-nav {
-    display: flex;
-    justify-content: center;
-}
-
-.nav-text-first {
-    color:#D41443;
-    font-family: 'DM Sans', sans-serif;
+.about-titles .about-first-text {
+    line-height: 0px;
+    font-family: 'Titan One', cursive;
+    color: #FFA5BA;
     font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 21px;  
-    margin-right: 50px;  
-}
-.nav-text-second {
-    color:#FFFFFF;
-    font-family: 'DM Sans', sans-serif;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 21px;
-    margin-right: 0px;
-}
-
-.nav-text-second:hover {
-    color:#D41443;
-    cursor: pointer;
-}
-
-.nav-text {
-    color:#FFFFFF;
-    font-family: 'DM Sans', sans-serif;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 21px;
-    margin-right: 50px; 
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 34px;
+    text-align: center;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    margin-top: 0px;
     
 }
-.nav-text:hover {
-    color:#D41443;
-    cursor: pointer;
+
+.about-titles .about-second-text {
+    line-height: 0px;
+    font-family: 'Titan One', cursive;
+    color: #D41443;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 58px;
+    line-height: 48px;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase; 
+    margin-top: 0px;
 }
 
- .nav-button {
+.about-paragraphs {
+    width: 463px;
+    height: 236px;
+    position: absolute;
+    top: 326px;
+    left: 616px;
+}
+
+.about-paragraphs .first-paragraph{
+margin-top: 0%;
+font-family: 'DM Sans', sans-serif;
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 28px;
+letter-spacing: 4%;
+color: #000000;
+}
+
+.about-paragraphs .second-paragraph{
+    margin-top: 30px;
+    font-family: 'DM Sans', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 27px;
+    letter-spacing: 4%;
+    color: #907E82;
+    
+}
+
+.about-button {
     background:#FFFFFF;
     color:#D41443;
     border: none;
     height: 44px;
-    width: 159px;
-    left: 1025px;
-    top: 40px;
+    width: 176px;
+    left: 653px;
+    top: 632px;
     border-radius: 22px;
     font-family: 'DM Sans', sans-serif;
     font-style: normal;
@@ -122,144 +108,94 @@ font-family: 'Titan One', cursive;
     font-size: 16px;
     line-height: 21px;
     cursor: pointer;
-    } 
-
-/*first-content*/
-    
-.header-presentation{
-display: flex;
-justify-content: space-between;
+    position: absolute;
+    top: 632px;
+    left: 616px;
 }
 
-.title-button {
-margin-left: 16px;
-width: 277px;
-padding-bottom: 12px;
-margin-top: 70px;
+.about-describing-one {
+    width: 288px;
+    position: absolute;
+    top: 887px;
+    left: 16px;
 }
- 
-.text-ice {
-    color:#FFFFFF;
-    font-family: 'Titan One', cursive;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 38px;
-    line-height: 44px;
-    letter-spacing: 0.04em;
-    text-transform: uppercase;
+
+  .about-describing-one .text-one {
     margin-top: 0px;
-    margin-bottom: 0px;
-}
-
-.text-passion {
-    display:inline;
+    margin-bottom: 30px;
     color:#D41443;
     font-family: 'Titan One', cursive;
     font-style: normal;
     font-weight: 400;
     font-size: 58px;
-    line-height: 58px;
-    letter-spacing: 0.04em;
-    text-transform: uppercase;
-    padding-top: 0px;
-    padding-top: 0px;
+    line-height: 46px; 
 }
 
-            
-.amount {
-    display:flex;
-    flex-direction: column;
-margin-right: 16px;
-position:absolute;
-top: 160px;
-left: 1145px;
+  .about-describing-one .text-two {
+    
+   color:#000000;
+   font-family: 'DM Sans', sans-serif;
+   font-style: normal;
+   font-weight: 700;
+   font-size: 16px;
+   line-height: 176%;
+   letter-spacing: 2%;
+  }
+
+  .about-describing-two {
+    width: 288px;
+    position: absolute;
+    top: 887px;
+    left: 419px;
 }
 
-.text-number {
+  .about-describing-two .text-one {
+    margin-top: 0px;
+    margin-bottom: 30px;
     color:#D41443;
     font-family: 'Titan One', cursive;
     font-style: normal;
     font-weight: 400;
-    font-size: 46px;
-    line-height: 44px;
-    letter-spacing: 0.04em;
-    text-transform: uppercase;
-    padding-top: 0px;
-    text-align: right;
-    margin-top: 0px;
-    margin-bottom: 0px;
- }
-
- .text-amount {
-    color:#FFFFFF;
-    font-family: 'DM Sans', sans-serif;
-    width: 78px;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 18px;
-    margin-right: 0px;
-    text-align: right;
- }
-
-
-/*second-content*/
-
-.buttons {
-display: flex;
-margin-left: 16px;
-margin-top: 18px;
+    font-size: 58px;
+    line-height: 46px; 
 }
 
-.buttons .products {
-    background:#D41443;
-    color:#FFFFFF;
-    border: none;
-    height: 40px;
-    width: 107px;
-    left: 1025px;
-    top: 40px;
-    border-radius: 20px;
-    font-family: 'DM Sans', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 18px;
-    cursor: pointer;
-    margin-right: 12px;
+  .about-describing-two .text-two {
+    color:#000000;
+   font-family: 'DM Sans', sans-serif;
+   font-style: normal;
+   font-weight: 700;
+   font-size: 16px;
+   line-height: 176%;
+   letter-spacing: 2%;
+  }
 
-   }
-
-
-.buttons .how {
-    background:#FFFFFF;
-    color:#D41443;
-    border: none;
-    height: 40px;
-    width: 138px;
-    left: 1025px;
-    top: 40px;
-    border-radius: 20px;
-    font-family: 'DM Sans', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 18px;
-    cursor: pointer;
-}
-
-.paragraphs {
-    width: 200px;
+  .about-describing-three {
+    width: 288px;
     position: absolute;
-    top: 436px;
-    left: 272px;
+    top: 887px;
+    left: 816px;
+}
 
+  .about-describing-three .text-one {
+    margin-top: 0px;
+    margin-bottom: 30px;
+    color:#D41443;
+    font-family: 'Titan One', cursive;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 58px;
+    line-height: 46px; 
 }
-.paragraphs .texts {
-    font-family: 'DM Sans', sans-serif;
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 140%;
-color: #FFFFFF;
-}
+
+  .about-describing-three .text-two {
+    color:#000000;
+   font-family: 'DM Sans', sans-serif;
+   font-style: normal;
+   font-weight: 700;
+   font-size: 16px;
+   line-height: 176%;
+   letter-spacing: 2%;
+  }
+
+  
