--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -31,40 +31,19 @@
           <p class="first-paragraph">
             Fusce ut velit laoreet, tempus arcu eu, molestie tortor. <br />
             Nam vel justo cursus, faucibus lorem eget, egestaseros.<br />
-            Maecenas elefend erat at justo fringilla.<br>
+            Maecenas elefend erat at justo fringilla.<br />
           </p>
           <p class="second-paragraph">
             Curabitur lacina enim at ex blandit, vel pellentesque odio <br />
             elementum. Mauris rhoncus orci in imperdiet placerat. <br />
             Vestibulum euismod nisl suscipt ligula volutpat, a feugiat urna
             <br />
-            maximus. Creas massa nibh, tincidunt.<br><br>
+            maximus. Creas massa nibh, tincidunt.<br /><br />
             Aliquam erat volutpat. Aenean accumsan.
           </p>
         </div>
 
         <button class="about-button" type="submit">Read more ></button>
-
-        <div class="about-describing-one">
-          <h1 class="text-one">721</h1>
-          <p class="text-two">
-            Aliquam ac dui vel dui vaulptate <br />consectetur. Mauris massa
-          </p>
-        </div>
-
-        <div class="about-describing-two">
-          <h1 class="text-one">16 Kg</h1>
-          <p class="text-two">
-            Aliquam ac dui vel dui vaulptate <br />consectetur. Mauris massa
-          </p>
-        </div>
-
-        <div class="about-describing-three">
-          <h1 class="text-one">84</h1>
-          <p class="text-two">
-            Aliquam ac dui vel dui vaulptate <br />consectetur. Mauris massa
-          </p>
-        </div>
       </div>
     </main>
   </body>
