--- a/src/partials/styles4about.css
+++ b/src/partials/styles4about.css
@@ -13,14 +13,17 @@
 
 .container-about {
     width: 1200px;
-    height: 1229px;
+    height: 757px;
     background: #FFF5F6;
+    margin: 0 auto;
+
 }
 
 .images-about {  
+  width: 100%;
     background-image:url("/src/images4about/rectangle4milk.png"), url("/src/images4about/cow4milk.png"), url("/src/images4about/721picture.png"), url("/src/images4about/16kgpicture.png"), url("/src/images4about/84picture.png");
     background-repeat: no-repeat, no-repeat, no-repeat, no-repeat, no-repeat;
-    background-size: 1200px 521px, 501px 501px, 50px 50px, 50px 50px, 44px 50px;
+    background-size: 100% 521px, 501px 501px, 50px 50px, 50px 50px, 44px 50px;
     background-position: 0px 236px, 16px 236px, 16px 797px, 416px 797px, 816px 797px; 
 }
 
@@ -62,12 +65,13 @@
     margin-top: 0px;
 }
 
-.about-paragraphs {
+   .about-paragraphs {
     width: 463px;
     height: 236px;
-    position: absolute;
+    position:absolute;
     top: 326px;
     left: 616px;
+    margin:0 auto;
 }
 
 .about-paragraphs .first-paragraph{
