--- a/src/css/contacts.css
+++ b/src/css/contacts.css
@@ -1,35 +1,79 @@
 :root {
   --contac-background-color-list: #ffffff;
 }
+
 body {
   font-family: 'DM Sans';
 }
+
 a {
   text-decoration: none;
 }
+
 ul {
   list-style: none;
 }
+
 li {
   text-decoration: none;
 }
+
+.container {
+  width: 1200px;
+  margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) and (max-width:1199px) {
+  .container {
+    width: 768px;
+  }
+
+  .contac_list {
+    width: 224px;
+    height: 100%;
+  }
+}
+
+@media screen and (min-width: 290px) and (max-width:767px) {
+  .container {
+    width: 320px;
+  }
+
+  .contac_view {
+    flex-direction: column;
+    gap: 20px
+  }
+
+  .contac_list {
+    width: 280px;
+  }
+
+  .contact_btn_servicio_container {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
 .contac_container {
   display: flex;
   justify-content: center;
 }
+
 .contac_view {
   display: flex;
   justify-content: center;
 }
+
 .contac_list {
   width: 368px;
-  height: 538px;
+  /*height: 538px;*/
   margin-right: 32px;
   box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
   border-radius: 24px;
   background-color: var(--contac-background-color-list);
   padding: 40px;
 }
+
 .contac_coffe_btn {
   width: 75.1px;
   height: 28px;
@@ -73,6 +117,7 @@ li {
   color: #000000;
   font-family: 'DM Sans';
 }
+
 .contac_description {
   font-family: 'DM Sans';
   font-style: normal;
@@ -96,6 +141,7 @@ li {
   letter-spacing: 0.04em;
   color: #000000;
 }
+
 .contac_shedule_hora {
   font-style: normal;
   font-weight: 500;
