--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -14,10 +14,10 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="../css/contacts.css" />
   </head>
   <body>
-    <section>
+    <section class="container">
       <div>
         <ul class="contac_view">
           <li class="contac_list">
