last-corrections-header

--- a/src/partials/styles.css
+++ b/src/partials/styles.css
@@ -8,12 +8,6 @@
 
   ul { list-style: none;}
   
-  /* Variables*/
-
-  :root {
-    --general-color:#FFFFFF; 
-
-  }
 
    /* HERO-HEADER-CLASS*/
 
@@ -21,13 +15,15 @@
     width: 1200px;
     height: 664px;
     background: #FFB8CA;
+    margin: 0 auto;
 }
 
 .images {
+    width: 100%;
     background-image:url("/src/images/cream4cone.png"), url("/src/images/soootasty.png"), url("/src/images/bigcircle.png"), url("/src/images/milk.png"), url("/src/images/circle.png"), url("/src/images/circle.png"), url("/src/images/arrow.png");
     background-repeat: no-repeat, no-repeat, no-repeat, no-repeat, no-repeat,no-repeat;
     background-size: 236px 557px, 304px 241px, 534px 534px, 213px 216px, 30px 30px, 30px 30px, 26px 26px;
-    background-position: 636px 115px, 880px 423px, 517px 54px, 16px 388px, 1154px 152px, 1154px 240px, 229px 554px;   
+    background-position: 636px 115px, 1194px bottom, 517px 54px, 16px 388px, 1472px 152px, 1472px 240px, 229px 554px;   
 }
 
 
@@ -148,11 +144,11 @@ margin-top: 70px;
 .amount {
     display:flex;
     flex-direction: column;
-margin-right: 16px;
-position:absolute;
-top: 160px;
-left: 1094px;
-}
+    margin-right: 16px;
+    position:absolute;
+    top: 160px;
+    left: 1414px;
+     }
 
 .text-number {
     color:#D41443;
