--- a/src/partials/styles.css
+++ b/src/partials/styles.css
@@ -140,14 +140,12 @@ margin-top: 70px;
     padding-top: 0px;
 }
 
-            
+ .header-presentation .amount {
+    margin-top: 70px;
+    margin-right: 25px;
+ }           
 .amount {
-    display:flex;
-    flex-direction: column;
-    margin-right: 16px;
-    position:absolute;
-    top: 160px;
-    left: 1414px;
+    display:block;
      }
 
 .text-number {
