--- a/src/partials/Mobile/customer.html
+++ b/src/partials/Mobile/customer.html
@@ -17,10 +17,10 @@
           <img src="Images/testimonials1 1.png" alt="persona1">
       </div> 
 <div class="flechascarrusel">
-  <img src="Images/“.png" alt="comillas">
-  <br>Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit </br>      nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</p>
-
-</div>
+   <div class="comilla"><img src="Images/“.png" alt="comillas"> </div>
+   
+   <div class="texto"><br> <p> Nullam viverra </br> consectetuer. Quisque </br> cursus et, porttitor risus.</br> Aliquam sem. In hendrerit </br> nulla quam nunc, </br> accumsan congue. Lorem  </br>ipsum primis in nibh vel </br> primis in nibh vel risus. </p></div>
+   risus. </p></div>
 </div>
 
 <div class="fincarrusel">
@@ -29,8 +29,10 @@
   <img src="/Images/Ellipse 5.png" alt="">
   <br>
   <br>
-  <p1>Emily, Los Angeles</p1>
+  <div class="name"><p1>Emily, Los Angeles</p1></div>
 </div>
+  
+
 
 
 <div class="itemcarrusel" id="itemcarrusel-2">
