changes size products images

--- a/css/styles.css
+++ b/css/styles.css
@@ -1192,17 +1192,17 @@ header>p {
 
   .products-item:nth-child(1)::before {
     top: -140px;
-    height: 100vw;
+    background-size: 280px 280px;
   }
 
   .products-item:nth-child(2)::before {
     top: -140px;
-    height: 100vw;
+    background-size: 280px 280px;
   }
 
   .products-item:nth-child(3)::before {
     top: -140px;
-    height: 100vw;
+    background-size: 280px 280px;
   }
 
   .products-item>h3 {
@@ -1983,6 +1983,21 @@ header>p {
     padding-bottom: 40px;
     padding-top: 118px;
     margin-top: 138px;
+  }
+
+  .products-item:nth-child(1)::before {
+    top: -138px;
+    background-size: 224px 224px;
+  }
+
+  .products-item:nth-child(2)::before {
+    top: -138px;
+    background-size: 224px 224px;
+  }
+
+  .products-item:nth-child(3)::before {
+    top: -138px;
+    background-size: 224px 224px;
   }
 
   .products-item>h3 {
